# MedTrace

./: .gitignore  README.md  pnpm-lock.yaml  tailwind.config.ts
app/: globals.css  layout.tsx  page.tsx
backend/: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_clinical_records.py
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/routes/: alerts.py  auth.py  batches.py  custody.py  dashboard.py  locations.py  medications.py  orders.py  patients.py  units.py
backend/app/core/: config.py  database.py  dependencies.py  security.py
backend/app/models/: __init__.py  alert.py  base.py  batch.py  clinical_record.py  enums.py  location.py  medication.py  order.py  patient.py  user.py
backend/app/repositories/: medication_repository.py  order_repository.py  unit_repository.py
backend/app/schemas/: alert.py  auth.py  batch.py  common.py  custody.py  dashboard.py  location.py  medication.py  order.py  patient.py
backend/app/services/: auth_service.py  clinical_history_service.py  custody_service.py  dashboard_service.py  order_service.py  seed_service.py
backend/tests/: test_health.py
components/medtrace/: app-header.tsx  bottom-tabs.tsx  empty-state.tsx  kpi-card.tsx  scan-input.tsx  status-badge.tsx  stepper.tsx  timeline.tsx
components/medtrace/screens/: escaneo-screen.tsx  etiquetas-screen.tsx  inicio-screen.tsx  login-screen.tsx  mas-screen.tsx  medicamentos-screen.tsx  (+2 more)
lib/: mock-data.ts  store.ts  types.ts
